# darca-log-facility

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  MAINTAINERS.rst  Makefile  Pipfile  README.rst  check.txt  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.rst  feature_request.rst
.github/workflows/: cd.yml  ci.yml
docs/source/: conf.py
src/darca_log_facility/: __init__.py  __version__.py  logger.py
tests/: conftest.py  test_logger.py
tests/temp_logs/: rotating_logger.log.1  rotating_logger.log.2
