[tool.poetry]
name = "darca-log-facility"
version = "0.1.0"
description = "Logging facility for reuse along projects."
authors = ["Roel Kist <roel.kist@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
